--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
   margin: auto;
 
   background: #ffffff;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .header {
@@ -112,11 +111,11 @@
 .main__iten-group {
   width: 608px;
   height: 242px;
-
   margin: auto;
 
   display: flex;
   justify-content: space-between;
+  justify-items: center;
 }
 .main__iten {
   width: 256px;
@@ -190,6 +189,8 @@
 }
 
 .section__style {
+  display: flex;
+  flex-direction: column;
   margin-top: 45px;
 }
 
@@ -292,7 +293,7 @@
 }
 .text__link {
   all: unset;
-  
+
   display: block;
 }
 
